[package]
name = "libdns"
version = "0.1.1"
authors = ["Lukas Schulte Pelkum <lockas.sp@proton.me>"]
edition = "2021"
description = "Abstracting and implementing DNS zone management for different providers"
repository = "https://github.com/lus/libdns-rs"
license = "0BSD"
keywords = ["dns", "zone", "abstract"]
categories = ["api-bindings"]

[dependencies]
thiserror = "2.0"
reqwest = { version = "0.13", optional = true, default-features = false, features = [
    "http2",
    "json",
] }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[features]
default = ["default-tls"]

dnspod = ["serde", "dep:reqwest", "serde_json"]
hetzner = ["serde", "dep:reqwest"]
technitium-dns = ["serde", "dep:reqwest", "serde_json"]

default-tls = ["reqwest?/default-tls"]
rustls-tls = ["reqwest?/rustls"]
native-tls = ["reqwest?/native-tls"]
native-tls-vendored = ["reqwest?/native-tls-vendored"]
