[package]
name = "manydns"
version = "1.1.1"
edition = "2021"
description = "Provider-agnostic DNS zone and record management, inspired by the Go libdns project"
license = "0BSD"
keywords = ["dns", "zone", "abstract", "provider"]
categories = ["api-bindings"]
repository = "https://github.com/usips/manydns-rs"
documentation = "https://docs.rs/manydns"

[lib]
name = "manydns"

[dependencies]
thiserror = "2.0"
reqwest = { version = "0.13", optional = true, default-features = false, features = [
    "http2",
    "json",
] }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
hex = { version = "0.4", optional = true }
chrono = { version = "0.4", optional = true, default-features = false, features = [
    "std",
] }
quick-xml = { version = "0.39", optional = true }

[dev-dependencies]
dotenvy = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
proptest = "1.5"
wiremock = "0.6"
serde_json = "1.0"
futures = "0.3"

[features]
default = ["default-tls"]

dnspod = ["serde", "dep:reqwest", "serde_json"]
tencent = [
    "serde",
    "dep:reqwest",
    "serde_json",
    "sha2",
    "hmac",
    "hex",
    "chrono",
]
cloudflare = ["serde", "dep:reqwest", "serde_json"]
hetzner = ["serde", "dep:reqwest"]
technitium-dns = ["serde", "dep:reqwest", "serde_json"]
namecheap = ["serde", "dep:reqwest", "quick-xml"]

default-tls = ["reqwest?/default-tls"]
rustls-tls = ["reqwest?/rustls"]
native-tls = ["reqwest?/native-tls"]
native-tls-vendored = ["reqwest?/native-tls-vendored"]
